[gd_scene load_steps=5 format=2]

[ext_resource path="res://joc tower defense/assets/Tilesheet/towerDefense_tilesheet.png" type="Texture" id=1]
[ext_resource path="res://joc tower defense/torres/torre_2(tanc).gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 35.7771

[sub_resource type="CircleShape2D" id=2]
radius = 400.0

[node name="tanc_1" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1216, 448, 64, 64 )

[node name="arma" type="Sprite" parent="."]
rotation = 6.28319
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1280, 640, 64, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="foc_1" type="Sprite" parent="arma"]
visible = false
position = Vector2( 7.55387, -40 )
rotation = -4.46638e-06
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1216, 768, 64, 64 )

[node name="foc_2" type="Sprite" parent="arma"]
visible = false
position = Vector2( -8.00018, -40 )
rotation = -4.46638e-06
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1216, 768, 64, 64 )

[node name="Position2D" type="Position2D" parent="arma"]
position = Vector2( -0.000107193, -24 )
rotation = -4.46638e-06

[node name="rang" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rang"]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="timer_dispar" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="animacio_foc" type="Timer" parent="."]
wait_time = 0.408
one_shot = true
[connection signal="area_entered" from="rang" to="." method="_on_rang_area_entered"]
[connection signal="area_exited" from="rang" to="." method="_on_rang_area_exited"]
[connection signal="timeout" from="timer_dispar" to="." method="_on_timer_dispar_timeout"]
[connection signal="timeout" from="animacio_foc" to="." method="_on_animacio_foc_timeout"]
